--- a/Code/run_yaml/Evaluate_SpecificSubs_NoAssist_NoHardLabel_PretrainedModel.yaml
+++ b/Code/run_yaml/Evaluate_SpecificSubs_NoAssist_NoHardLabel_PretrainedModel.yaml
@@ -37,14 +37,14 @@ storage:
 
 search:
   job_template:
-    name: Eval_SpecificSubs_FinetuneEpochs_{Finetune_Epochs}_NoAssist_NoHard_PreModel_from_MNLI_NoAug_to_{TASK_NAME}_EpochsMNLI_{Epochs_TrainMNLI}_H_{Hidden_Mult}_L_{Depth_Mult}_A_{Width_Mult}
+    name: FinetuneEpochs_{Finetune_Epochs}_Task_{TASK_NAME}_EpochsMNLI_{Epochs_TrainMNLI}_H_{Hidden_Mult}_L_{Depth_Mult}_A_{Width_Mult}
     sku: G1 #G8
     command:
       - python eval_glue_NoAssist_AddHidDim.py
         --model_type bert
         --task_name {TASK_NAME}
         --data_dir $$AMLT_DATA_DIR/Data_GLUE/glue_data/{TASK_NAME}/
-        --model_dir $$AMLT_DATA_DIR/Outputs/glue/{TASK_NAME}/NoAssist/All_FINETUNING_NoHardLabel_PreModel/SpecificSubs/FinetuneEpochs_{Finetune_Epochs}_NoA_from_MNLI_EpochsMNLI_{Epochs_TrainMNLI}_Sub_{Subs}/
+        --model_dir $$AMLT_DATA_DIR/Outputs/glue/{TASK_NAME}/NoAssist/All_FINETUNING_NoHardLabel_PreModel/SpecificSubs/FinetuneEpochs_{Finetune_Epochs}_EpochsMNLI_{Epochs_TrainMNLI}_Sub_{Subs}/
         --output_dir $$AMLT_OUTPUT_DIR/
         --max_seq_length {Max_Seq_Length}
         --hidden_mult {Hidden_Mult}
@@ -77,6 +77,6 @@ search:
       values: ['H_1.0_L_0.5_A_1.0']
     - name: Finetune_Epochs
       spec: discrete
-      values: [3, 6, 12]
+      values: [3, 6, 9]
 
 
