Update configuration files

--- a/Code/run_yaml/Evaluate_SpecificSubs_NoAssist_NoHardLabel_PretrainedModel.yaml
+++ b/Code/run_yaml/Evaluate_SpecificSubs_NoAssist_NoHardLabel_PretrainedModel.yaml
@@ -56,7 +56,7 @@ search:
   params:
     - name: TASK_NAME
       spec: discrete
-      values: ['MRPC', 'RTE'] # 'MRPC', 'RTE'
+      values: ['RTE'] # 'MRPC', 'RTE'
     - name: Max_Seq_Length
       spec: discrete
       values: [128]
