--- a/Code/run_yaml/Train_wiki_NoAssist_NoHard_PreModel_RndSampl.yaml
+++ b/Code/run_yaml/Train_wiki_NoAssist_NoHard_PreModel_RndSampl.yaml
@@ -48,9 +48,9 @@ storage:
 search:
   job_template:
     name: Epochs_{Num_Train_Epochs}
-    sku: G8
+    sku: G16
     command:
-      - python run_wiki_NoAssist_RndSampl.py
+      - python -m torch.distributed.launch --nproc_per_node=16 run_wiki_NoAssist_RndSampl.py
         --model_type bert
         --task_name {TASK_NAME}
         --do_train
@@ -88,7 +88,7 @@ search:
       values: [2e-5]
     - name: Per_GPU_Train_Batch_Size
       spec: discrete
-      values: [24]
+      values: [64]
     - name: Num_Train_Epochs
       spec: discrete
       values: [3]
