--- a/Code/run_yaml/Train_wiki_NoAssist_NoHard_PreModel_RndSampl.yaml
+++ b/Code/run_yaml/Train_wiki_NoAssist_NoHard_PreModel_RndSampl.yaml
@@ -86,7 +86,7 @@ search:
       values: [128]
     - name: LR
       spec: discrete
-      values: [5e-6, 1e-5, 2e-5, 4e-5, 8e-5, 16e-5, 32e-5] # [2e-5]
+      values: [1e-5, 2e-5, 4e-5, 8e-5, 16e-5] # [2e-5]
     - name: Per_GPU_Train_Batch_Size
       spec: discrete
       values: [64]
