--- a/Code/run_yaml/Train_NoAssist_SeriesEpochs_NoHard_PreModel_RndSampl_DK_AmltVersion.yaml
+++ b/Code/run_yaml/Train_NoAssist_SeriesEpochs_NoHard_PreModel_RndSampl_DK_AmltVersion.yaml
@@ -1,4 +1,4 @@
-description: MNLI_NoAug_NoHard_PreModel_RndSampl
+description: NoAssist_MNLI_NoAug_NoHard_PreModel_RndSampl
 
 target:
   service: amlk8s
@@ -19,28 +19,20 @@ environment:
     - pip install --user boto3
     - pip install --user regex
     - pip install --user sklearn
-    - pip install --user tensorflow-gpu==2.3.1
-    # - git clone https://github.com/NVIDIA/apex
-    # - cd apex
-    # - pip install -v --disable-pip-version-check --no-cache-dir --global-option="--cpp_ext" --global-option="--cuda_ext" ./
 
 code:
   # local directory of the code. this will be uploaded to the server.
   # $CONFIG_DIR is expanded to the directory of this config file
   local_dir: ../
 
-# data:
-#   local_dir:  ../../Data_and_Models
-#   remote_dir: data_and_models
-
 data:
-  local_dir:  /home/subho/workspace/philly_data
+  local_dir:  ../../Data_and_Models
   remote_dir: data_and_models
 
 storage:
   output:
-    storage_account_name: subho
-    container_name: phillytools
+    storage_account_name: dongkuan
+    container_name: dynabert
     # mount_dir: /mnt/dynabertw
 
 search:
@@ -52,9 +44,9 @@ search:
         --model_type bert
         --task_name {TASK_NAME}
         --do_train
-        --data_dir $$PT_DATA_DIR/Data_GLUE/glue_data/{TASK_NAME}/
-        --model_dir $$PT_DATA_DIR/Local_models/pretrained_BERTs/BERT_base_uncased/
-        --output_dir $$PT_OUTPUT_DIR/
+        --data_dir $$AMLT_DATA_DIR/Data_GLUE/glue_data/{TASK_NAME}/
+        --model_dir $$AMLT_DATA_DIR/Local_models/pretrained_BERTs/BERT_base_uncased/
+        --output_dir $$AMLT_OUTPUT_DIR/
         --max_seq_length {Max_Seq_Length}
         --learning_rate {LR}
         --per_gpu_train_batch_size {Per_GPU_Train_Batch_Size}
