--- a/Code/run_yaml/Train_wiki_NoAssist_NoHard_PreModel_RndSampl_11232Subs_DP.yaml
+++ b/Code/run_yaml/Train_wiki_NoAssist_NoHard_PreModel_RndSampl_11232Subs_DP.yaml
@@ -1,4 +1,4 @@
-description: NoAssist_wiki_PreModel_11232Subs
+description: NoAssist_wiki_PreModel_11232Subs_DP
 
 target:
   service: amlk8s
@@ -48,9 +48,9 @@ storage:
 search:
   job_template:
     name: Epochs_{Num_Train_Epochs_WholeSet}
-    sku: G16
+    sku: G3
     command:
-      - python -m torch.distributed.launch --nproc_per_node=16 run_wiki_NoAssist_RndSampl.py
+      - python run_wiki_NoAssist_RndSampl.py
         --model_type bert
         --task_name {TASK_NAME}
         --do_train
@@ -93,7 +93,7 @@ search:
       values: [2e-5] # [1e-5, 2e-5, 4e-5, 8e-5, 16e-5]
     - name: Per_GPU_Train_Batch_Size
       spec: discrete
-      values: [96] # [64]
+      values: [32]
     - name: Num_Train_Epochs
       spec: discrete
       values: [3]
