--- a/Code/run_yaml/Train_wiki_NoAssist_NoHard_PreModel_RndSampl_27Subs.yaml
+++ b/Code/run_yaml/Train_wiki_NoAssist_NoHard_PreModel_RndSampl_27Subs.yaml
@@ -1,4 +1,4 @@
-description: NoAssist_wiki_NoHard_PreModel_RndSampl_27Subs
+description: NoAssist_wiki_PreModel_27Subs
 
 target:
   service: amlk8s
@@ -93,7 +93,7 @@ search:
       values: [2e-5] # [1e-5, 2e-5, 4e-5, 8e-5, 16e-5]
     - name: Per_GPU_Train_Batch_Size
       spec: discrete
-      values: [64]
+      values: [96] # [64]
     - name: Num_Train_Epochs
       spec: discrete
       values: [3]
