--- a/Code/run_yaml/Continue_Train_OneSub_wiki_book_Seqlen128.yaml
+++ b/Code/run_yaml/Continue_Train_OneSub_wiki_book_Seqlen128.yaml
@@ -56,6 +56,7 @@ search:
         --do_train
         --data_dir $$PT_DATA_DIR/Data_GLUE/glue_data/{TASK_NAME}/
         --pregenerated_data $$PT_DATA_DIR/English_Wiki_Book/Seq_len_128/
+        --model_dir_teacher $$PT_DATA_DIR/Local_models/pretrained_BERTs/BERT_base_uncased/
         --model_dir $$PT_DATA_DIR/Local_models/trained_supernets/10_12_2021/trusty-lynx/
         --output_dir $$PT_OUTPUT_DIR/
         --max_seq_length {Max_Seq_Length}
