--- a/Code/run_yaml/Finetune_WikiBook_SpecificSubs_Multi_base.yaml
+++ b/Code/run_yaml/Finetune_WikiBook_SpecificSubs_Multi_base.yaml
@@ -84,7 +84,7 @@ search:
       values: [32]
     - name: Num_Train_Epochs
       spec: discrete
-      values: [20]
+      values: [20]                  # [0.083, 0.167, 0.25, 0.333, 0.417, 0.5, 0.583, 0.667, 0.75 , 0.833, 0.917, 1.0 ]
     - name: Depth_Mult_List                    ## base = H, A, R, L = 32*18, 12, 4.0, 12 = 66,019,968
       spec: discrete
       values: ['1.0']                          # Layer (12)
